--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-bookbazar.in - by Ananda Prakash Verma (www.apverma.com) and Jyotiska NK (www.jyotiska.com)
+bookbazar.jyotiska.com - by Jyotiska NK
+
+
 
 Note - This is the source code of our website www.bookabzar.in, our website takes a book name as a search parameter and searches through the internet and displays the book prices and other details in popular Indian online book merchants.
 
